--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -27,3 +27,10 @@ RUN bash nodesource_setup.sh
 RUN apt-get install nodejs
 RUN rm nodesource_setup.sh
 RUN npm install -g yarn
+
+
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
+COPY docker/php/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug111.ini
+
